fixed alignment on indicators

--- a/mptindicators/static/scss/_mpt-main.scss
+++ b/mptindicators/static/scss/_mpt-main.scss
@@ -984,6 +984,7 @@ dl.breakdown {
 	ul {
 		list-style-type: none;
 		margin: 0;
+		clear: both;
 	}
 	h3, form {
 		display: block;
